frontend/src/app/configuration/probe-position/components/probe-position-management.component.scss
.card {
    border-radius: 8px;
    overflow: hidden;
    min-height: 40vh;
  
    .card-header {
      background-color: #f8f9fa;
      font-weight: bold;
    }   
  
    table {
      th,
      td {
        vertical-align: middle;
        cursor: pointer;
      }
    }
  }

.icon {
  width: 16px;
  height: 16px;
  display: inline-block;
  vertical-align: -0.125em; 
  pointer-events: none;    
}  

.btn-primary .icon,
.btn-danger .icon {
  filter: invert(1); 
}

